[project]
name = "agentlite"
version = "0.1.2"
description = "A minimalist AI Agent framework"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
]

[dependency-groups]
dev = ["pytest>=7.0"]
